// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HabitabilityLetterEmailToUserBody works with LA users 1`] = `
<div>
  <p>
    Hello Boop,
  </p>
  <p>
    You've sent your Notice To Repair letter. Attached to this email is a PDF copy for your records.
  </p>
  <p>
    You can contact Strategic Actions for a Just Economy (SAJE) - a 501c3 non-profit organization in South Los Angeles.
  </p>
  <blockquote>
    <em>
      Since 1996 SAJE has been a force for economic justice in our community focusing on tenant rights, healthy housing, and equitable development. SAJE believes that the fate of city neighborhoods should be decided by those who dwell there, and convenes with other organizations to ensure this occurs in a manner that is fair, replicable, and sustainable. Housing is a human right.
    </em>
  </blockquote>
  <p>
    <strong>
      Strategic Actions for a Just Economy (SAJE) is available for phone calls at (213) 745-9961, Monday-Friday from 10:00am-6:00pm.
    </strong>
  </p>
</div>
`;

exports[`HabitabilityLetterEmailToUserBody works with SF users 1`] = `
<div>
  <p>
    Hello Boop,
  </p>
  <p>
    You've sent your Notice To Repair letter. Attached to this email is a PDF copy for your records.
  </p>
</div>
`;
